# ansible-role-tripleo-dpdk

./: .gitignore  README.md  ansible.cfg  libvirt-setup.yml  project.config  setup.cfg  setup.py
config/: mynetworkconfigfile.yml
config/general_config/: featureset033.yml  featureset034.yml
config/release/: rhos-pike.yml
playbooks/: create-vm.yml  destroy-all.yml  libvirt-custom-setup.yml  libvirt-custom-teardown.yml  t1.yml
roles/common/defaults/: main.yml
roles/common/tasks/: main.yml
roles/kvm-nested/defaults/: main.yml
roles/kvm-nested/handlers/: main.yml
roles/kvm-nested/tasks/: main.yml
roles/kvm-nested/tests/: test.yml
roles/kvm-nested/vars/: main.yml
roles/libvirt-network/defaults/: main.yml
roles/libvirt-network/handlers/: main.yml
roles/libvirt-network/tasks/: main.yml
roles/libvirt-network/templates/: network.xml.j2
roles/libvirt-network/tests/: test.yml
roles/libvirt-network/vars/: main.yml
roles/ovs/defaults/: main.yml
roles/ovs/handlers/: main.yml
roles/ovs/tasks/: main.yml
roles/ovs/tests/: test.yml
roles/ovs/vars/: main.yml
roles/test/tasks/: main.yml
scripts/: undercloud-convert.sh
