[metadata]
name = ansible-role-tripleo-dpdk
summary = Role for DPDK specific testing and installation
description-file =
    README.md
author = Sanjay Upadhyay
author-email = supadhya@redhat.com
home-page = https://github.com/saneax/ansible-role-tripleo-dpdk
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities
[global]
setup-hooks =
    pbr.hooks.setup_hook
[files]
data_files =
    playbooks = playbooks/*
    config = config/*
    scripts = scripts/*
    usr/local/share/ansible/roles/tripleo-dpdk/defaults = defaults/*
    usr/local/share/ansible/roles/tripleo-dpdk/handlers = handlers/*
    usr/local/share/ansible/roles/tripleo-dpdk/meta = meta/*
    usr/local/share/ansible/roles/tripleo-dpdk/tasks = tasks/*
    usr/local/share/ansible/roles/tripleo-dpdk/templates = templates/*
    usr/local/share/ansible/roles/tripleo-dpdk/files = files/*
    usr/local/share/ansible/roles/tripleo-dpdk/tests = tests/*
    usr/local/share/ansible/roles/tripleo-dpdk/vars = vars/*
[wheel]
universal = 1
[pbr]
skip_authors = True
skip_changelog = True
